--- a/view/dashs/suporte.html
+++ b/view/dashs/suporte.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DashBoard | Tempo real </title>
-    <link rel="stylesheet" href="dashSuporte.css">
+    <link rel="stylesheet" href="/dashs.style/dashSuporte.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <div class="navegacao">
             <div class="topo">
                 <div class="user">
-                    <img class="ph" src="img/user.svg" alt="">
+                    <img class="ph" src="/img/user.svg" alt="">
                     <div class="info-user">
                         <h2 class="nome-user">User</h2>
                         <span class="email-user">exemploemail@gmail.com</span>
@@ -26,19 +28,19 @@
                 <ul>
                     <li>
                         <a href="">
-                            <span class="icons"><img src="img/dashboard.svg" alt=""></span>
+                            <span class="icons"><img src="/img/dashboard.svg" alt=""></span>
                             <span class="titulo">DASHBOARD</span>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <span class="icons"><img src="img/alertas.svg" alt=""></span>
+                            <span class="icons"><img src="/img/alertas.svg" alt=""></span>
                             <span class="titulo">ALERTAS</span>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <span class="icons"><img src="img/database-fill-add.svg" alt=""></span>
+                            <span class="icons"><img src="/img/database-fill-add.svg" alt=""></span>
                             <span class="titulo">MÁQUINAS</span>
                         </a>
                     </li>
@@ -46,7 +48,7 @@
             </div>
 
             <div class="nav-footer">
-                <button class="botao-sair">Sair</button>
+                <button id="alerta" class="botao-sair">Sair</button>
             </div>
         </div>
 
@@ -64,7 +66,7 @@
                             <option value="">Máquina 03 (M03)</option>
                             <option value="">Máquina 04 (M04)</option>
                         </select>
-                        <span class="icons"><img src="img/buscar.svg" alt=""></span>
+                        <span class="icons"><img src="/img/buscar.svg" alt=""></span>
                     </label>
                 </div>
             </div>
@@ -423,5 +425,17 @@
     };
 
     new Chart(ctx5, config5);
+
+    const button = document.getElementById("alerta")
+    button.addEventListener("click", () =>{
+        Swal.fire({
+        title:'Componente Memoria RAM está sobrecarregado',
+        text: "RAM do Servidor M02 está utilizando: 90%",
+        icon: 'warning',
+        showConfirmButton: false,
+        timer: 3000
+        })
+    })
+
 
 </script>
