atualização dash gestor

--- a/view/dashs/gestor.html
+++ b/view/dashs/gestor.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="grafico">
-            <p style="color: #44395F; font-weight: bold;">Alertas de cada componente</p>
+            <p style="color: #44395F; font-weight: bold;">Alertas de cada componente (mês atual)</p>
             <canvas id="graficoBarras" width="400" height="200"></canvas>
         </div>
         <!--</div>-->
