fix: navBar fixed

--- a/view/cadastro.html
+++ b/view/cadastro.html
@@ -6,8 +6,10 @@
     <title>Cadastro/Login</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./style/cadastro.css">
+    <link rel="stylesheet" href="./style/header.css">
 </head>
 <body>
+
 
     <div class="container">
         <div class="formulario login">
