--- a/view/style/home.css
+++ b/view/style/home.css
@@ -78,7 +78,7 @@ h1{
     font-size: 23px;
     text-align: center;
     width: 55%;
-    z-index: 2;
+    z-index: 1;
     gap: 10px;
 }
 
@@ -270,9 +270,11 @@ h1{
     align-items: center;
     height: 80vh;
     width: 100vw;
-    gap: 30%;
+    gap: 20%;
 
 }
+
+
 
 .ContatoText{
     display: flex;
@@ -308,6 +310,8 @@ h1{
     display: flex;
     flex-direction: column;
     gap: 30px;
+    margin-right: 5%;
+
 }
 
 .contato{
@@ -538,7 +542,7 @@ h1{
 
 }
 
-@media (min-width: 400px) and (max-width: 869px){
+@media (min-width: 300px) and (max-width: 869px){
 
     body{
         overflow-x: hidden;
@@ -600,7 +604,11 @@ h1{
     }
 
     .containerContato{
-        gap: 20%;
+        gap: 2%;
+    }
+
+    .contatos{
+        margin-right: 2%;
     }
 
     .sobreText{
@@ -636,7 +644,7 @@ h1{
     }
 }
 
-@media (min-width: 400px) and (max-width: 729px){
+@media (min-width: 300px) and (max-width: 729px){
     .containerHome{
         height: 100vh;
         width: 100%;
@@ -715,3 +723,18 @@ h1{
     }
 }
 
+@media (min-width: 300px) and (max-width: 400px){
+
+    .mainText p{
+        font-size: 18px;
+    }
+
+    .containerHome{
+        background-size: 500%;
+    }
+
+    .footer{
+        width: 100vw;
+        gap: 8%;
+    }
+}
