--- a/web-data-viz/public/style/cadastro.css
+++ b/web-data-viz/public/style/cadastro.css
@@ -8,26 +8,11 @@
 }
 
 body {
-    background: linear-gradient(90deg, #56408c, #3a2e52);
-}
-
-#navBar{
-    margin-bottom: 10%;
-    position: absolute;
-}
-
-#containerBtn{
-    z-index: 9999;
-    position: absolute;
-
-}
-
-.page{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh -13vh;
-    /* background: linear-gradient(90deg, #56408c, #3a2e52); */
+    min-height: 100vh;
+    background: linear-gradient(90deg, #56408c, #3a2e52);
 }
 
 .container { 
@@ -37,7 +22,6 @@ body {
     background: #fff;
     border-radius: 30px;
     box-shadow: 0 0 30px rgba(0, 0, 0, .2);
-    margin: 10% 20px 20px 20px;
     overflow: hidden;
 }
 
@@ -231,7 +215,7 @@ form {
     }
 
     .container.ativado .alternar_formulario::before {
-        top:70%;
+        top:74%;
         left: 0;
     }
 
