Arruma cadastro e organização de pastas

--- a/web-data-viz/public/style/cadastro.css
+++ b/web-data-viz/public/style/cadastro.css
@@ -8,11 +8,26 @@
 }
 
 body {
+    background: linear-gradient(90deg, #56408c, #3a2e52);
+}
+
+#navBar{
+    margin-bottom: 10%;
+    position: absolute;
+}
+
+#containerBtn{
+    z-index: 9999;
+    position: absolute;
+
+}
+
+.page{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background: linear-gradient(90deg, #56408c, #3a2e52);
+    min-height: 100vh -13vh;
+    /* background: linear-gradient(90deg, #56408c, #3a2e52); */
 }
 
 .container { 
@@ -22,6 +37,7 @@ body {
     background: #fff;
     border-radius: 30px;
     box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+    margin: 10% 20px 20px 20px;
     overflow: hidden;
 }
 
@@ -195,6 +211,14 @@ form {
         height: calc(100vh - 40px);
     }
 
+    #btnMenu{
+        z-index: 999;
+        position: absolute;
+        color: black;
+        /* display: block; */
+        font-size: 50px;
+    }
+
     .formulario {
         bottom: 0;
         width: 100%;
@@ -215,7 +239,7 @@ form {
     }
 
     .container.ativado .alternar_formulario::before {
-        top:74%;
+        top:70%;
         left: 0;
     }
 
@@ -246,6 +270,14 @@ form {
 @media screen and (max-width: 400px) {
     .formulario {
         padding: 20px;
+    }
+
+    #btnMenu{
+        z-index: 999;
+        position: absolute;
+        color: black;
+        /* display: block; */
+        font-size: 50px;
     }
 
     .alternar_informacao h1 {
